broccoli+typescript+rollup

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,11 @@
     <title>It's a counter</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="styles/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <h1>It's a counter</h1>
     <dev class="app"></dev>
 
-    <script src="build/bundle.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
